--- a/src/app/college-marathon/add-topic-dialog/add-topic-dialog.component.html
+++ b/src/app/college-marathon/add-topic-dialog/add-topic-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="set-12 dlghd">
   <div class="set-11">
-    <strong>Agrega tu Problema</strong>
+    <strong>Edita tu Problema</strong>
   </div>
   <div class="set-1 txt-right">
     <button type="button" mat-mini-fab color="primary" (click)="killDialog()" [disabled]="submitted">
@@ -9,7 +9,12 @@
   </div>
 </div>
 
-<form class="set-12 edtrfrm" [formGroup]="topicFG" (submit)="saveDescription(topicFG)">
+<form class="set-12 edtrfrm" [formGroup]="topicFG" (submit)="editTopic(topicFG)">
+  <mat-form-field appearance="outline">
+    <mat-label>Título</mat-label>
+    <input matInput formControlName="title">
+  </mat-form-field>
+
   <div class="set-12">
     <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
   </div>
