--- a/src/app/college-marathon/create-team/create-team.component.html
+++ b/src/app/college-marathon/create-team/create-team.component.html
@@ -8,13 +8,15 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus ex et purus volutpat, vitae varius ligula
       ornare. Nulla consectetur ultrices laoreet.</p>
 
-    <div class="set-12 myteams">
-      <h3>Mis Equipos</h3>
-      <div class="set-12" *ngFor="let team of user['teams']">
-        <button type="button" mat-raised-button color="primary"
-          (click)="utilityService.linkMe('/maraton/equipos/' + team['_id'])">
-          {{team['name']}}
-        </button>
+    <div class="set-12 myteams" *ngIf="userAvailable">
+      <div class="set-12" *ngIf="user['teams'].length != 0">
+        <h3>Mis Equipos</h3>
+        <div class="set-12" *ngFor="let team of user['teams']">
+          <button type="button" mat-raised-button color="primary"
+            (click)="utilityService.linkMe('/maraton/equipos/' + team['_id'])">
+            {{team['name']}}
+          </button>
+        </div>
       </div>
     </div>
   </div>
