--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -29,10 +29,11 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          zoom: 0.7;
+          // zoom: 0.7;
         }
 
         mat-icon {
+          margin-right: 10px;
           font-size: 14pt;
         }
       }
@@ -300,7 +301,98 @@
     }
   }
 
+  .emptytestimonies {
+    margin-top: 20px;
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    button {
+      mat-icon {
+        margin-right: 10px;
+        font-size: 14pt;
+      }
+    }
+  }
+
+  .availabletestimonies {
+    .set-6:nth-child(odd) {
+      padding-right: 10px;
+    }
+
+    .set-6:nth-child(even) {
+      padding-left: 10px;
+    }
+
+    .set-6 {
+      margin-bottom: 20px;
+    }
+
+    .usrcrd {
+      padding: 20px;
+      background: #00031d;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      position: relative;
+
+      * {
+        margin: 0;
+      }
+
+      p {
+        color: #ffffff;
+      }
+
+      .usrimg {
+        width: 70px;
+        height: 70px;
+        border-radius: 100%;
+        overflow: hidden;
+        background: #ffffff;
+        margin-right: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+          float: left;
+        }
+      }
+
+      .crdmenu {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+
+        mat-icon {
+          color: #ffffff;
+        }
+      }
+    }
+
+    .heads {
+      justify-content: flex-end;
+
+      button {
+        mat-icon {
+          margin-right: 10px;
+          font-size: 14pt;
+        }
+      }
+    }
+  }
+
   .foot {
     margin-top: 40px;
+  }
+
+  pdf-viewer {
+    height: 100vh;
   }
 }
