--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -42,6 +42,19 @@
     .desc {
       text-align: justify;
     }
+
+    .btns {
+      margin: 20px 0;
+
+      button {
+        zoom: 0.7;
+        margin-right: 10px;
+
+        mat-icon {
+          font-size: 14pt;
+        }
+      }
+    }
   }
 
   .teambanner {
@@ -138,7 +151,16 @@
     }
 
     .teamtools {
-      padding: 20px 0;
+      padding: 100px 0 20px 0;
+
+      .set-4,
+      .set-8 {
+        padding-left: 40px;
+      }
+
+      .set-8 {
+        margin-top: -90px;
+      }
     }
 
     .emptycollabs {
@@ -272,11 +294,31 @@
     }
 
     .bnrinfo {
-      padding: 20px 0 0 240px;
+      h3 {
+        margin-bottom: 10px;
+      }
 
       .location,
       .author {
         font-style: italic;
+      }
+
+      .row:not(:first-child) {
+        margin-top: 20px;
+      }
+
+      .row {
+        button.vote {
+          width: 100%;
+        }
+
+        button.mini {
+          margin: 0 5px;
+
+          mat-icon {
+            font-size: 14pt;
+          }
+        }
       }
     }
 
@@ -288,7 +330,7 @@
 
       button {
         margin-left: 10px;
-        zoom: 0.7;
+        // zoom: 0.7;
 
         mat-icon {
           font-size: 13pt;
