--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -437,4 +437,25 @@
   pdf-viewer {
     height: 100vh;
   }
+
+  .objcom {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+
+    h3 {
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    button {
+      mat-icon {
+        margin-right: 10px;
+        font-size: 14pt;
+      }
+    }
+  }
 }
