--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -77,8 +77,8 @@
               </mat-form-field>
             </div>
             <div class="set-9">
-              <button type="button" mat-mini-fab color="primary" matTooltip="Agregar problema"
-                matTooltipClass="tooltip" (click)="popAddDocumentTheme()" *ngIf="isCollaborator">
+              <button type="button" mat-mini-fab color="primary" matTooltip="Agregar problema" matTooltipClass="tooltip"
+                (click)="popAddDocumentTheme()" *ngIf="isCollaborator">
                 <mat-icon>add_circle</mat-icon>
               </button>
             </div>
