--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -320,6 +320,21 @@
           }
         }
       }
+
+      .scorehldr {
+        width: 190px;
+        height: 190px;
+        border-radius: 100%;
+        overflow: hidden;
+        margin: 10px auto 40px auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 50pt;
+        background: rgba($color: #00031d, $alpha: 1.0);
+        // border: 1px solid rgba($color: #000000, $alpha: 0.3);
+        color: #54f093;
+      }
     }
 
     .toolrgt {
@@ -455,6 +470,33 @@
       mat-icon {
         margin-right: 10px;
         font-size: 14pt;
+      }
+    }
+  }
+
+  .emptyprop {
+    h3 {
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 20px;
+    }
+
+    button {
+      mat-icon {
+        margin-right: 10px;
+        font-size: 14pt;
+      }
+    }
+
+    .ctrls {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      mat-spinner {
+        margin-left: 20px;
       }
     }
   }
