--- a/src/app/public-documents/components/modal-votes/modal-votes.component.scss
+++ b/src/app/public-documents/components/modal-votes/modal-votes.component.scss
@@ -25,11 +25,29 @@
 
   .modal-body {
     width: 100%;
+    margin-top: 40px;
 
-    .table-container {
+    .btn-hldr {
+      margin-bottom: 10px;
+    }
+
+    .btn-hldr:last-child {
+      margin-bottom: 0;
+    }
+
+    button {
       width: 100%;
-      height: 100%;
-      margin-top: 20px;
+      background: #E1F2EC;
+      padding: 15px;
+      border-radius: 5px;
+      font-size: 13pt;
+      font-weight: bold;
+      box-shadow: 0px 1px 3px rgb(0 0 0 / 25%) !important;
+      transition: all .2s linear;
+    }
+
+    .selected {
+      background: linear-gradient(180deg, #71F5AD 0%, #0EAA70 100%) !important;
     }
   }
 
