--- a/src/app/college-marathon/single-team/single-team.component.html
+++ b/src/app/college-marathon/single-team/single-team.component.html
@@ -41,39 +41,6 @@
       </div>
     </div>
 
-    <!-- <div class="set-12 bnrinfo">
-      <div class="set-6">
-        <p class="location">
-          <small><strong>Tema:</strong> {{team['layout']['category']['name']}} /
-            {{team['sublayout']['category']['name']}}</small>
-        </p>
-        <p class="author">
-          <small><strong>Líder:</strong> {{team['createdBy']['firstname']}} {{team['createdBy']['lastname']}}</small>
-        </p>
-        <p class="author">
-          <small><strong>Equipo:</strong> {{team['name']}}</small>
-        </p>
-        <p class="author">
-          <small><strong>Cobertura: </strong> {{team['coverage'][0]['name']}}</small>
-        </p>
-      </div>
-
-      <div class="set-6 toolrgt">
-        <button type="button" mat-mini-fab color="primary">
-          <mat-icon>star</mat-icon>
-        </button>
-        <button type="button" mat-mini-fab color="primary">
-          <mat-icon>favorite</mat-icon>
-        </button>
-        <button type="button" mat-mini-fab color="primary">
-          <mat-icon>forum</mat-icon>
-        </button>
-        <button type="button" mat-mini-fab color="primary">
-          <mat-icon>share</mat-icon>
-        </button>
-      </div>
-    </div> -->
-
     <div class="set-12 teamtools">
       <div class="set-4 bnrinfo">
         <mat-card>
@@ -97,7 +64,8 @@
               <h3>Puntuación de Equipo</h3>
               <div class="scorehldr">{{teamScore}}</div>
             </div>
-            <button type="button" mat-raised-button color="accent" class="vote">
+            <button type="button" mat-raised-button color="accent" class="vote" (click)="popTeamVoteDialog()"
+              *ngIf="team['vote'] == null">
               Votar por <strong>{{team['name']}}</strong>
             </button>
           </div>
@@ -131,9 +99,9 @@
                   <button type="button" mat-mini-fab color="primary" (click)="openModalVote('topic')">
                     <mat-icon>star</mat-icon>
                   </button>
-                  <button type="button" mat-mini-fab color="primary" (click)="popAddCommentsDialog('topic')">
+                  <!-- <button type="button" mat-mini-fab color="primary" (click)="popAddCommentsDialog('topic')">
                     <mat-icon>forum</mat-icon>
-                  </button>
+                  </button> -->
                   <button type="button" mat-mini-fab color="primary" (click)="popEditTopicDialog()" *ngIf="isLeader">
                     <mat-icon>edit</mat-icon>
                   </button>
@@ -151,8 +119,13 @@
                 </button>
               </div>
 
-              <div class="set-12 objcom">
-                <div class="set-12" *ngFor="let comment of topic['comments']">
+              <div class="set-12 objcom" *ngIf="topic['comments'].length != 0">
+                <button type="button" mat-raised-button color="primary" (click)="popAddCommentsDialog('topic')">
+                  <mat-icon>forum</mat-icon>
+                  <small>Comentar</small>
+                </button>
+
+                <div class="set-12 comment" *ngFor="let comment of topic['comments']">
                   <div class="set-12">
                     <strong><small>{{comment['createdBy']['firstname']}}
                         {{comment['createdBy']['lastname']}}</small></strong>
