--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -472,6 +472,12 @@
         font-size: 14pt;
       }
     }
+
+    .comment {
+      padding: 20px;
+      border-radius: 5px;
+      background: #f1f1f1;
+    }
   }
 
   .emptyprop {
