--- a/src/app/college-marathon/single-team/single-team.component.scss
+++ b/src/app/college-marathon/single-team/single-team.component.scss
@@ -45,6 +45,8 @@
 
     .btns {
       margin: 20px 0;
+      display: flex;
+      align-items: center;
 
       button {
         zoom: 0.7;
@@ -473,10 +475,57 @@
       }
     }
 
+    .comlst {
+      margin-top: 20px;
+    }
+
     .comment {
       padding: 20px;
       border-radius: 5px;
-      background: #f1f1f1;
+      background: #00031d;
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+
+      * {
+        margin: 0;
+      }
+
+      .avatar {
+        width: 70px;
+        height: 70px;
+        overflow: hidden;
+        border-radius: 100%;
+        background: #ffffff;
+        float: left;
+        color: #00031d;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14pt;
+      }
+
+      .msg {
+        float: left;
+        width: calc(100% - 110px);
+        margin-left: 20px;
+      }
+
+      .date {
+        color: rgba($color: #ffffff, $alpha: 0.6) !important;
+      }
+    }
+
+    .tri {
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 40px 40px 0 0;
+      border-color: #00031D transparent transparent transparent;
+      position: absolute;
+      bottom: -40px;
+      right: 50%;
     }
   }
 
@@ -489,13 +538,6 @@
       margin-bottom: 20px;
     }
 
-    button {
-      mat-icon {
-        margin-right: 10px;
-        font-size: 14pt;
-      }
-    }
-
     .ctrls {
       display: flex;
       align-items: center;
@@ -503,6 +545,25 @@
 
       mat-spinner {
         margin-left: 20px;
+      }
+    }
+  }
+
+  .availableprop {
+    .ctrls {
+      margin-bottom: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+    }
+  }
+
+  .emptyprop,
+  .availableprop {
+    button {
+      mat-icon {
+        margin-right: 10px;
+        font-size: 14pt;
       }
     }
   }
